--- a/package.json
+++ b/package.json
@@ -16,6 +16,8 @@
     "jsonwebtoken": "^9.0.2",
     "node-cron": "^3.0.3",
     "sqlite3": "^5.1.7",
+    "swagger-jsdoc": "^6.2.8",
+    "swagger-ui-express": "^5.0.1",
     "uuid": "^10.0.0"
   }
 }
